security-group.tf
### Security group configuration
#
#### VPC's Default Security Group ======*/
#resource "aws_security_group" "default" {
#  name        = "default-sg"
#  description = "Default security group to allow inbound/outbound from the VPC"
#  vpc_id      = aws_vpc.vpc.id
#  depends_on  = [aws_vpc.vpc]
#  ingress {
#    from_port = "0"
#    to_port   = "0"
#    protocol  = "-1"
#    self      = true
#  }
#
#  egress {
#    from_port = "0"
#    to_port   = "0"
#    protocol  = "-1"
#    self      = "true"
#  }
#  tags = {
#    Name    = "subnet-eSchool"
#    Owner   = "Vadim Tailor"
#    Project = "awsEschool"
#  }
#}
#
#
## Open web port
#resource "aws_security_group" "web" {
#  name        = "web"
#  description = "Allow web incgress trafic"
#  vpc_id      = aws_vpc.vpc.id
#  tags = {
#    Name = "web"
#  }
#
#
#  dynamic "ingress" {
#    for_each = ["80", "443", "8080", "3306"]
#    content {
#      from_port   = ingress.value
#      to_port     = ingress.value
#      protocol    = "tcp"
#      cidr_blocks = ["0.0.0.0/0"]
#    }
#  }
#
#  # Open access to public network
#  egress {
#    from_port   = 0
#    to_port     = 0
#    protocol    = "-1"
#    cidr_blocks = ["0.0.0.0/0"]
#  }
#}
#
### Open database port
##resource "aws_security_group" "db" {
##  name        = "db"
##  description = "Allow db incgress trafic"
##  vpc_id      = aws_vpc.eSchool.id
##  tags = {
##    Name = "db"
##  }
##
##  # db port
##  ingress {
##    from_port   = 3306
##    to_port     = 3306
##    protocol    = "tcp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##
##  # db port
##  ingress {
##    from_port   = 3306
##    to_port     = 3306
##    protocol    = "udp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##
##  # Open access to public network
##  egress {
##    from_port   = 0
##    to_port     = 0
##    protocol    = "-1"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##}
##
##
### Open app  port
##resource "aws_security_group" "app" {
##  name        = "app"
##  description = "Allow app incgress trafic"
##  vpc_id      = aws_vpc.eSchool.id
##  tags = {
##    Name = "app"
##  }
##
##  # db port
##  ingress {
##    from_port   = 8080
##    to_port     = 8080
##    protocol    = "tcp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##
##  # Open access to public network
##  egress {
##    from_port   = 0
##    to_port     = 0
##    protocol    = "-1"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##}
##
##
################ Private network #################################
##/*
##  NAT Instance
##*/
##resource "aws_security_group" "nat" {
##  name        = "vpc_nat"
##  description = "Allow traffic to pass from the private subnet to the internet"
##  vpc_id      = aws_vpc.eSchool.id
##  ingress {
##    from_port   = 80
##    to_port     = 80
##    protocol    = "tcp"
##    cidr_blocks = ["192.168.2.0/24"]
##  }
##  ingress {
##    from_port   = 443
##    to_port     = 443
##    protocol    = "tcp"
##    cidr_blocks = ["192.168.2.0/24"]
##  }
##  ingress {
##    from_port   = 22
##    to_port     = 22
##    protocol    = "tcp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##  ingress {
##    from_port   = -1
##    to_port     = -1
##    protocol    = "icmp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##
##  egress {
##    from_port   = 80
##    to_port     = 80
##    protocol    = "tcp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##  egress {
##    from_port   = 443
##    to_port     = 443
##    protocol    = "tcp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##  egress {
##    from_port   = 22
##    to_port     = 22
##    protocol    = "tcp"
##    cidr_blocks = ["192.168.0.0/16"]
##  }
##  egress {
##    from_port   = -1
##    to_port     = -1
##    protocol    = "icmp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##
##  tags = {
##    Name    = "NATSG"
##    Owner   = "Vadim Tailor"
##    Project = "awsEschool"
##  }
##}
#
#
#
###  Web Servers
##resource "aws_security_group" "web" {
##  name        = "vpc_web"
##  description = "Allow incoming HTTP connections."
##  vpc_id      = aws_vpc.vpc.id
##  ingress {
##    from_port   = 80
##    to_port     = 80
##    protocol    = "tcp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##  ingress {
##    from_port   = 443
##    to_port     = 443
##    protocol    = "tcp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##  ingress {
##    from_port   = -1
##    to_port     = -1
##    protocol    = "icmp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##  egress { # MySQL
##    from_port   = 3306
##    to_port     = 3306
##    protocol    = "tcp"
##    cidr_blocks = ["192.168.2.0/24"]
##  }
##
##
##  tags = {
##    Name    = "WebServerSG"
##    Owner   = "Vadim Tailor"
##    Project = "awsEschool"
##  }
##}
##
##
#
#
#
#
#/*
#  Database Servers
##*/
##resource "aws_security_group" "db_private" {
##  name        = "vpc_db"
##  description = "Allow incoming database connections."
##
##  ingress { # SQL Server
##    from_port       = 1433
##    to_port         = 1433
##    protocol        = "tcp"
##    security_groups = ["${aws_security_group.web.id}"]
##  }
##  ingress { # MySQL
##    from_port       = 3306
##    to_port         = 3306
##    protocol        = "tcp"
##    security_groups = ["${aws_security_group.web.id}"]
##  }
##
##  ingress {
##    from_port   = 22
##    to_port     = 22
##    protocol    = "tcp"
##    cidr_blocks = ["${var.vpc_cidr}"]
##  }
##  ingress {
##    from_port   = -1
##    to_port     = -1
##    protocol    = "icmp"
##    cidr_blocks = ["${var.vpc_cidr}"]
##  }
##
##  egress {
##    from_port   = 80
##    to_port     = 80
##    protocol    = "tcp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##  egress {
##    from_port   = 443
##    to_port     = 443
##    protocol    = "tcp"
##    cidr_blocks = ["0.0.0.0/0"]
##  }
##
##  vpc_id = aws_vpc.eSchool.id
##
##  tags = {
##    Name    = "DBServerSG"
##    Owner   = "Vadim Tailor"
##    Project = "awsEschool"
##  }
##}
#
